hcc/tests/conform/errors/sema/redeclare_local.hc
//@ error: redeclaration of `x`
#include <stdlib.hh>
U0 Main()
{
  I64 x;
  I64 x;
}
